--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.9.5",
     "mongoose-sequence": "^6.0.1",
     "nodemon": "^3.1.9",
