--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@fvilers/disable-react-devtools": "github:fvilers/disable-react-devtools",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
